# uv-ws-demo

./: README.md  pyproject.toml
src/workspaces/: __init__.py  cli.py
